# awesome-wav

./: CMakeLists.txt  Makefile  ProjectHome.md  WAVFormat.md  arg_processor.cpp  arg_processor.hpp  awesomewav.md  buffer.hpp  byteOperations.hpp  cd_da.cpp  cd_da.hpp  fileOperations.hpp  file_compression.c  file_compression.cpp  file_compression.h  file_compression.hpp  global.hpp  logger.cpp  main.cpp  riff.hpp  riff_func.hpp  riff_struct.hpp  util.cpp  util.hpp  wav.cpp  wav.hpp
branches/ver1_0_X/: arg_processor.hpp  riff.hpp  riff_func.hpp  riff_struct.hpp  wav.hpp
branches/ver1_0_X/compression/: compress_util.cpp
branches/ver1_0_X/crypt/: aes_util.hpp  sha2_util.cpp
branches/ver1_0_X/trunk/: riff_struct.hpp  wav.cpp
branches/ver1_0_X/trunk/vs2008/: awesome-wav.vcproj
branches/ver1_0_X/vs2008/: awesome-wav.sln
branches/ver1_1_X/: CMakeLists.txt  Makefile
branches/ver1_1_X/src/: arg_processor.cpp  arg_processor.hpp  flac.cpp  flac_func.hpp  flac_struct.hpp  global.hpp  logger.cpp  main.cpp
branches/ver1_1_X/src/compression/: compress_util.cpp  compress_util2.hpp
branches/ver1_1_X/src/crypt/: aes.c  aes_util.hpp
branches/ver1_1_X/test_suite/: awesome-test.bat  awesome-test.sh
branches/ver1_1_X/vs2008/: awesome-wav.vcproj
compression/: compress_util.cpp  compress_util.hpp  file_compression.c
crypt/: aes.c  aes.h  aes_util.cpp  aes_util.hpp  config.h  padlock.c  padlock.h  sha2.c  sha2.h  sha2_util.cpp  sha2_util.hpp
docs/: README.txt  crypt.txt
src/: arg_processor.cpp  flac.cpp  flac.hpp  flac_func.hpp  flac_struct.hpp  global.hpp  guimain.cpp  logger.cpp  main.cpp  riff.hpp  riff_func.hpp  riff_struct.hpp  util.cpp  util.hpp  wav.cpp  wav.hpp
src/compression/: compress_util.cpp  compress_util2.cpp  compress_util2.hpp  file_compression.h
src/crypt/: aes.c  aes_util.cpp  aes_util.hpp  config.h
src/flac/: bitmath.c  format.c  memory.c  metadata_object.c  stream_decoder.c  stream_encoder.c
src/flac/private/: lpc.h  window.h
src/flac/protected/: stream_encoder.h
src/win32/: awesome-gui.au3
test_suite/: awesome-test.bat
trunk/: CMakeLists.txt  Makefile  arg_processor.cpp  arg_processor.hpp  buffer.hpp  byteOperations.hpp  cd_da.cpp  cd_da.hpp  fileOperations.hpp  file_compression.c  file_compression.cpp  file_compression.h  global.hpp  logger.cpp  logger.hpp  main.cpp  riff.hpp  riff_func.hpp  riff_struct.hpp  typedefs.hpp  util.cpp  util.hpp  wav.cpp  wav.hpp
trunk/compression/: compress_util.cpp  compress_util.hpp  file_compression.c
trunk/crypt/: aes.c  aes.h  aes_util.cpp  aes_util.hpp  config.h  padlock.c  sha2.c  sha2_util.cpp  sha2_util.hpp
trunk/docs/: README.txt  quicklz-license.txt  todo.txt  zlib-license.txt
trunk/src/: arg_processor.cpp  arg_processor.hpp  flac.cpp  flac.hpp  flac_struct.hpp  global.hpp  guimain.h  main.cpp  riff_func.hpp  riff_struct.hpp  util.cpp  util.hpp  wav.cpp  wav.hpp
trunk/src/compression/: compress_util2.cpp  quicklz.h
trunk/src/crypt/: aes.h  aes_util.cpp  sha2.c  sha2_util.hpp
trunk/src/flac/: bitreader.c  main.c  metadata_object.c  stream_decoder.c  stream_encoder.c
trunk/src/flac/FLAC/: export.h  stream_decoder.h
trunk/src/flac/private/: fixed.h  memory.h
trunk/test_suite/: awesome-test.bat
trunk/vs2008/: awesome-wav.vcproj
trunk/zlib-1.2.4-slim/: crc32.h
vs2008/: awesome-wav.vcproj
wiki/: WAVFormat.wiki  awesomewav.wiki
